# AI-native-OS-learning-enzo

./: README.md
ai4ose-lab1-2026s/: README.md  build.rs  tags  开发进度.md
ai4ose-lab1-2026s/docs/: 5-basic-labs.md  START.md  plan-2.11-16.md
ai4ose-lab1-2026s/logs/: chat1.md  开发进度.md
ai4ose-lab1-2026s/src/: content.txt
docs/: result.txt  result2.11-2.16.txt  result2.11-2.17.txt  春节学习计划.md
rCore-Tutorial-in-single-workspace/: .gitignore  Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/ch1/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/ch1-lab/: Cargo.toml  README.md  build.rs
rCore-Tutorial-in-single-workspace/ch1-lab/src/: main.rs
rCore-Tutorial-in-single-workspace/ch1/src/: main.rs
rCore-Tutorial-in-single-workspace/ch2/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/ch3/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/ch4/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/ch4/src/: process.rs
rCore-Tutorial-in-single-workspace/ch5/: Cargo.toml
rCore-Tutorial-in-single-workspace/ch5/src/: process.rs  processor.rs
rCore-Tutorial-in-single-workspace/ch6/: Cargo.toml  README.md  test.sh
rCore-Tutorial-in-single-workspace/ch6/src/: fs.rs  main.rs  process.rs  processor.rs  virtio_block.rs
rCore-Tutorial-in-single-workspace/ch7/: Cargo.toml  README.md  test.sh
rCore-Tutorial-in-single-workspace/ch7/src/: fs.rs  main.rs  process.rs  processor.rs  virtio_block.rs
rCore-Tutorial-in-single-workspace/ch8/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/ch8/src/: fs.rs  main.rs  process.rs  processor.rs  virtio_block.rs
rCore-Tutorial-in-single-workspace/docs/: developer-prompt-result.txt
rCore-Tutorial-in-single-workspace/scripts/: clean_all.sh  create_bundle.sh  extract_workspace.sh  publish_all.sh
rCore-Tutorial-in-single-workspace/src/: lib.rs
rCore-Tutorial-in-single-workspace/tg-checker/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-checker/src/: checker.rs  main.rs
rCore-Tutorial-in-single-workspace/tg-checker/src/cases/: ch2.rs  ch3.rs  ch4.rs  ch5.rs  ch6.rs  ch7.rs  ch8.rs  mod.rs
rCore-Tutorial-in-single-workspace/tg-console/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-easy-fs/: Cargo.toml
rCore-Tutorial-in-single-workspace/tg-kernel-alloc/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-kernel-context/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-kernel-vm/: Cargo.toml
rCore-Tutorial-in-single-workspace/tg-linker/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-sbi/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-signal/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-signal-defs/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-signal-impl/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-sync/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-syscall/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-syscall/src/: syscall.h.in  user.rs
rCore-Tutorial-in-single-workspace/tg-syscall/src/kernel/: mod.rs
rCore-Tutorial-in-single-workspace/tg-task-manage/: Cargo.toml  README.md
rCore-Tutorial-in-single-workspace/tg-user/: Cargo.toml  README.md
tg-ch3/: work.md
tg-ch3/src/: main.rs  task.rs
tg-ch4/: CH4_DEBUG_SUMMARY.md
tg-ch4/src/: main.rs  process.rs
tg-ch5/: work.md
tg-ch5/src/: main.rs  process.rs  processor.rs
tg-ch6/: Cargo.toml  Cargo.toml.orig  build.rs  work.md
tg-ch6/src/: fs.rs  main.rs  process.rs
tg-ch6/tg-easy-fs/src/: efs.rs  layout.rs  vfs.rs
