[package]
name = "tg-rcore-tutorial"
description = "Componentized rCore tutorial workspace bundle for OS teaching experiments."
version = "0.4.2-preview.6"
edition = "2024"
repository = "https://github.com/rcore-os/tg-rcore-tutorial"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial"
documentation = "https://docs.rs/tg-rcore-tutorial"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "os", "riscv", "tutorial"]
categories = ["no-std", "embedded"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    ".gitignore",
    "src/**",
    "bundle/tg-rcore-tutorial.tar.gz",
    "scripts/extract_workspace.sh",
]

[workspace]
members = [
    "ch1-lab",
    "tg-linker",
    "tg-console",
    "tg-syscall",
    "tg-kernel-context",
    "tg-kernel-alloc",
    "tg-kernel-vm",
    "tg-task-manage",
    "tg-easy-fs",
    "tg-signal-defs",
    "tg-signal",
    "tg-signal-impl",
    "tg-sync",
    "tg-sbi",
]
resolver = "2"
exclude = ["ch1","ch2","ch3","ch4","ch5","ch6","ch7","ch8","tg-user","tg-checker"]

# 统一的包元数据，子 crate 可通过 `xxx.workspace = true` 继承
[workspace.package]
version = "0.4.2-preview.1"
edition = "2024"
repository = "https://github.com/rcore-os/tg-rcore-tutorial"
license = "GPL-3.0"
keywords = ["rcore", "os", "riscv", "tutorial"]
categories = ["no-std", "embedded"]

# 统一的依赖版本管理
[workspace.dependencies]
# 外部依赖
spin = "0.9"
bitflags = "1.2"
log = "0.4"
riscv = "0.10"
numeric-enum-macro = "0.2"

# 内部 crate 依赖
tg-console = { path = "tg-console", version = "0.4.2-preview.1" }
tg-linker = { path = "tg-linker", version = "0.4.2-preview.1" }
tg-syscall = { path = "tg-syscall", version = "0.4.2-preview.1" }
tg-kernel-context = { path = "tg-kernel-context", version = "0.4.2-preview.1" }
tg-kernel-alloc = { path = "tg-kernel-alloc", version = "0.4.2-preview.1" }
tg-kernel-vm = { path = "tg-kernel-vm", version = "0.4.2-preview.1" }
tg-task-manage = { path = "tg-task-manage", version = "0.4.2-preview.1" }
tg-easy-fs = { path = "tg-easy-fs", version = "0.4.2-preview.1" }
tg-signal-defs = { path = "tg-signal-defs", version = "0.4.2-preview.1" }
tg-signal = { path = "tg-signal", version = "0.4.2-preview.1" }
tg-signal-impl = { path = "tg-signal-impl", version = "0.4.2-preview.1" }
tg-sync = { path = "tg-sync", version = "0.4.2-preview.1" }
tg-sbi = { path = "tg-sbi", version = "0.4.2-preview.1" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
