[package]
name = "tg-ch1-lab"
description = "Chapter 1 lab of rCore Tutorial: minimal bare-metal Supervisor program."
version = "0.4.2-preview.1"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial/tree/test"
documentation = "https://docs.rs/tg-ch1-lab"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "bare-metal"]
categories = ["no-std", "embedded"]

[features]
default = []
nobios = [
    "tg-sbi/nobios",
]

[dependencies]
tg-sbi = { path = "../tg-sbi", version = "0.4.2-preview.1" }
tg-console = { path = "../tg-console", version = "0.4.2-preview.1" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
