[package]
name = "tg-signal-defs"
description = "Signal definitions for rCore tutorial OS."
version = "0.4.2-preview.1"
edition = "2024"
authors = ["scPointer <jax01@foxmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial"
documentation = "https://docs.rs/tg-signal-defs"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "signal", "no-std", "riscv"]
categories = ["no-std", "embedded"]

[dependencies]
numeric-enum-macro = "0.2"
