[package]
name = "tg-user"
description = "User-space apps for rCore Tutorial chapters (subset for ch2)."
version = "0.4.2-preview.1"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial/tree/singledev"
documentation = "https://docs.rs/tg-user"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "user-apps"]
categories = ["no-std", "embedded"]

[lib]
name = "user_lib"
path = "src/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
tg-console = { version = "0.4.2-preview.1" }
tg-syscall = { version = "0.4.2-preview.1", features = ["user"] }
customizable-buddy = "0.0.2"
